# Lacrei-Saude-API

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  CHECKLIST.md  CHECKLIST_FASE_6.md  COMANDOS_UTEIS.md  DOCUMENTACAO_DOCKER_RESUMO.md  Dockerfile  EXEMPLO_SANITIZACAO.md  FASE_6_DOCKER_COMPLETA.md  INICIO_RAPIDO.md  PLANO_IMPLEMENTACAO.md  README.md  RELATORIO_TESTES.md  RESUMO_EXECUTIVO.md  SECURITY.md  SETUP_NOVO_COMPUTADOR.md  TEMPLATES_CONFIG.md  docker-compose.example.yml  docker-compose.yml  manage_security.py  pyproject.toml  pytest.ini  test_logging.py  test_security.py  test_security_config.py
.github/workflows/: ci-cd.yml  tests.yml
appointments/: admin.py  filters.py  models.py  permissions.py  serializers.py  views.py
appointments/fixtures/: appointments.json
appointments/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: README.md  middleware.py  security_config.py  tests.py  validators.py  views.py
docker/: README.md  entrypoint.sh  nginx.conf
docs/: CICD_GUIDE.md  GITHUB_SECRETS.md
professionals/: admin.py  apps.py  models.py  serializers.py  views.py
professionals/fixtures/: professionals.json
professionals/migrations/: 0001_initial.py
scripts/: deploy-ecs.sh  smoke-tests.sh
tests/: __init__.py  conftest.py  test_appointments.py  test_professionals.py  test_security.py
